--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
